--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -2,5 +2,7 @@
 
 @import "../../vendor/bower/html5-boilerplate/css/normalize.css";
 @import "../../vendor/bower/html5-boilerplate/css/main.css";
+@import "frontpage.css";
+@import "borderbox.css";
 
 /*-- Application stylesheets. -----------------------------------------------*/
